# Multi-Client-Chat-Server

./: .gitignore  CMakeLists.txt  README.md  client.c  client_helpers.c  commands.txt  logger.c  logger.h  main.c  multiprocess_server.c  router  router.c  server  server.c  server_setup.c  server_setup.h
client/: client  client.c  client_helpers.c  client_helpers.h
server/: fd_list.c  fd_list.h  logger.c  logger.h  main.c  server  server_setup.c  server_setup.h
src/: CMakeLists.txt  client.c  client_helpers.c  client_helpers.h  fd_list.c  fd_list.h  logger.c  logger.h  router.c  server_setup.c
src/client/: client_helpers.c  client_helpers.h
src/server/: fd_list.c  fd_list.h  logger.c  server.c  server_setup.h
